...
import kotlinx.serialization.json.*
import kotlin.math.min
import kotlin.math.roundToInt


internal const val PLAYBACK_FAVORITE_STAR_TEST_TAG = "PlaybackFavoriteStar"
internal const val PLAYBACK_INFO_BUTTON_TEST_TAG = "PlaybackInfoButton"
internal const val PLAYBACK_SECTION_BUTTON_TEST_TAG = "PlaybackSectionButton"
internal const val PLAYBACK_MODE_SWITCH_TEST_TAG = "PlaybackModeSwitch"
internal const val PLAYBACK_TEMPO_DIAL_TEST_TAG = "PlaybackTempoDial"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun SongDetailView(
    song: Song,
...
